# pyobs-web-admin

./: .gitignore  ACL_GROUPS.md  ACL_MATRIX.md  DEVELOPMENT.md  DEV_EJABBERD_USER_MANAGEMENT.md  DEV_JOURNALD_LOGS.md  EJABBERD_INTEGRATION.md  EJABBERD_USER_MANAGEMENT.md  JOURNALD_LOGS.md  README.md  ejabberdctl-sudo.sh  manage.py  pyproject.toml
deploy/: deploy.sh  pyobs-web-admin.service
dev-docs/: DEVELOPMENT.md  DEV_ACL_GROUPS.md  DEV_ACL_MATRIX.md  DEV_EJABBERD_INTEGRATION.md  DEV_JOURNALD_LOGS.md
docs/: Makefile  requirements.txt
docs/source/: api_endpoints.rst  architecture.rst  conf.py  configuration.rst  development.rst  hub.rst  index.rst  installation.rst
docs/source/api/: ejabberd.rst  index.rst  proxy.rst  services.rst  views.rst
docs/source/ejabberd/: index.rst  integration.rst  user_management.rst
docs/source/features/: acl.rst  dashboard.rst  logging.rst  module_management.rst
modules/: context_processors.py  ejabberd.py  middleware.py  proxy.py  pyobs_config.py  services.py  tests.py  urls.py  views.py
pyobs_web_admin/: asgi.py  local_settings.py.example  settings.py  urls.py  wsgi.py
templates/: base.html
templates/modules/: acl_matrix.html  all_logs.html  dashboard.html  detail.html  fleet_overview.html  groups.html  new_module.html  packages.html  shared_detail.html  xmpp_users.html
templates/registration/: login.html
