[project]
name = "pyobs-web-admin"
version = "0.1.0"
description = "Web-based administration interface for pyobs robotic telescope modules"
authors = [
    { name = "Timo Oliver Husser", email = "timoliver.husser@gmail.com" },
]
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.6",
    "gunicorn>=26.0.0",
    "psutil>=6.0",
    "requests>=2.32",
]
